se agrega controlador para imagen

--- a/.env
+++ b/.env
@@ -18,10 +18,10 @@ VITE_API_URL=http://localhost:8080/postulantes/
 
 NODE_ENV=development
 PORT=8080
-DB_PASSWORD=2147483637
+DB_PASSWORD=123456
 DB_HOST=localhost
 DB_USER=root
-DATABASE_BD = c1841398_hammer
+DATABASE_BD = DB_HammerDESA_c1841398
 # DATABASE_TABLE = postulantes se quita la definicion de una tabla, esto limita el llamado a otras tablas
 
 # Variables específicas para el entorno de testing
