--- a/.env
+++ b/.env
@@ -16,12 +16,12 @@
 #variables de desarrollo
 VITE_API_URL=http://localhost:8080/postulantes/
 
-# NODE_ENV=development
-PORT= 32765
-DB_PASSWORD=PkbxBbldNmrAKPTUXBIYARXpDbiaMrGk
-DB_HOST=monorail.proxy.rlwy.net
+NODE_ENV=development
+PORT=8080
+DB_PASSWORD=123456
+DB_HOST=localhost
 DB_USER=root
-DATABASE_BD = railway
+DATABASE_BD = DB_HammerDESA_c1841398
 # DATABASE_TABLE = postulantes se quita la definicion de una tabla, esto limita el llamado a otras tablas
 
 # Variables específicas para el entorno de testing
