--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./app.js",
-    "start" : "node ./app.js"
+    "start": "node ./app.js"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +17,9 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
     "sequelize": "^6.37.1"
   },
