--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "fast-csv": "^5.0.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
-    "sequelize": "^6.37.1"
+    "sequelize": "^6.37.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "dotenv": "^16.0.1"
