--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.1",
     "fast-csv": "^5.0.1",
     "jsonwebtoken": "^9.0.2",
+    "moment-timezone": "^0.5.46",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "node-cron": "^3.0.3",
