--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
     "sequelize": "^6.37.1",
+    "sharp": "^0.32.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
