--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
     "express": "^4.18.1",
     "fast-csv": "^5.0.1",
     "jsonwebtoken": "^9.0.2",
