--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.11.0",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
@@ -23,6 +24,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "node-cron": "^3.0.3",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.13",
     "sequelize": "^6.37.1",
     "sharp": "^0.32.1",
