--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.13",
+    "playwright": "^1.56.0",
     "sequelize": "^6.37.1",
     "sharp": "^0.32.1",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "dotenv": "^16.0.1"
