--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.13",
     "playwright": "^1.56.0",
+    "puppeteer": "^24.34.0",
     "sequelize": "^6.37.1",
     "sharp": "^0.32.1",
     "xlsx": "^0.18.5",
